src/objects/Medical_Records__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Records</relationshipLabel>
        <relationshipName>Medical_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diease__c</fullName>
        <label>Diease</label>
        <picklist>
            <picklistValues>
                <fullName>Alzheimer patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prone to Stress</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health_Plan_ID__c</fullName>
        <label>Health Plan ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_Plan__c</fullName>
        <label>Health Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Reason__c</fullName>
        <label>Open Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Medical_Record__c</fullName>
        <label>Patient Medical Record #</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <label>Patient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <label>Physician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Id__c</fullName>
        <label>Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <label>Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tzix_id__c</fullName>
        <label>tzix_id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Medical Records</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Medical Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>